<resources>
    <string name="app_name" translatable="false">Zanime</string>
    <string name="name">Name</string>
    <string name="categories">Categories</string>
    <string name="manga">Manga</string>
    <string name="chapters">Chapters</string>
    <string name="track">Tracking</string>
    <string name="history">History</string>
    <string name="label_more">More</string>
    <string name="label_settings">Settings</string>
    <string name="label_download_queue">Download queue</string>
    <string name="label_library">Library</string>
    <string name="label_recent_updates">Updates</string>
    <string name="label_recent_manga">History</string>
    <string name="label_sources">Sources</string>
    <string name="label_categories">Categories</string>
    <string name="label_backup">Backup</string>
    <string name="label_migration">Migrate</string>
    <string name="label_extensions">Extensions</string>
    <string name="label_extension_info">Extension info</string>
    <string name="label_help">Help</string>
    <string name="unlock_app">Unlock Tachiyomi</string>
    <string name="confirm_exit">Press back again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_downloaded">Downloaded</string>
    <string name="action_filter_bookmarked">Bookmarked</string>
    <string name="action_filter_unread">Unread</string>
    <string name="action_filter_read">Read</string>
    <string name="action_filter_empty">Remove filter</string>
    <string name="action_sort_alpha">Alphabetically</string>
    <string name="action_sort_total">Total chapters</string>
    <string name="action_sort_last_read">Last read</string>
    <string name="action_sort_last_checked">Last checked</string>
    <string name="action_sort_latest_chapter">Latest chapter</string>
    <string name="action_search">Search</string>
    <string name="action_global_search">Global search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_select_inverse">Select inverse</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_mark_as_unread">Mark as unread</string>
    <string name="action_mark_previous_as_read">Mark previous as read</string>
    <string name="action_download">Download</string>
    <string name="action_download_unread">Download unread chapters</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_remove_bookmark">Unbookmark</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="action_update_library">Update library</string>
    <string name="action_enable_all">Enable all</string>
    <string name="action_disable_all">Disable all</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_add_category">Add category</string>
    <string name="action_edit_categories">Edit categories</string>
    <string name="action_rename_category">Rename category</string>
    <string name="action_move_category">Set categories</string>
    <string name="action_edit_cover">Edit cover</string>
    <string name="action_sort_up">Sort up</string>
    <string name="action_sort_down">Sort down</string>
    <string name="action_show_downloaded">Downloaded</string>
    <string name="action_next_unread">Next unread</string>
    <string name="action_view_chapters">View chapters</string>
    <string name="action_stop">Stop</string>
    <string name="action_pause">Pause</string>
    <string name="action_close">Close</string>
    <string name="action_previous_chapter">Previous chapter</string>
    <string name="action_next_chapter">Next chapter</string>
    <string name="action_retry">Retry</string>
    <string name="action_remove">Remove</string>
    <string name="action_start">Start</string>
    <string name="action_resume">Resume</string>
    <string name="action_move">Move</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_open_in_web_view">Open in WebView</string>
    <string name="action_open_in_settings">Open in Settings</string>
    <string name="action_migrate">Migrate</string>
    <string name="action_display_mode">Display mode</string>
    <string name="action_display">Display</string>
    <string name="action_display_grid">Compact grid</string>
    <string name="action_display_list">List</string>
    <string name="action_display_comfortable_grid">Comfortable grid</string>
    <string name="action_display_download_badge">Download badges</string>
    <string name="action_display_unread_badge">Unread badges</string>
    <string name="action_display_show_tabs">Show category tabs</string>
    <string name="action_disable">Disable</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cancel_all">Cancel all</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_descending">Descending</string>
    <string name="action_reorganize_by">Reorder</string>
    <string name="action_newest">Newest</string>
    <string name="action_oldest">Oldest</string>
    <string name="action_move_to_top">Move to top</string>
    <string name="action_move_to_bottom">Move to bottom</string>
    <string name="action_install">Install</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
    <string name="action_undo">Undo</string>
    <string name="action_open_log">Open log</string>
    <string name="action_create">Create</string>
    <string name="action_restore">Restore</string>
    <string name="action_open">Open</string>
    <string name="action_login">Log in</string>
    <string name="action_webview_back">Back</string>
    <string name="action_webview_forward">Forward</string>
    <string name="action_webview_refresh">Refresh</string>
    <string name="loading">Loading…</string>
    <string name="app_not_available">App not available</string>
    <string name="short_recent_updates">Updates</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_library">Library</string>
    <string name="pref_category_reader">Reader</string>
    <string name="pref_category_downloads">Downloads</string>
    <string name="pref_category_tracking">Tracking</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_about">About</string>
    <string name="pref_theme_mode">Dark mode</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Off</string>
    <string name="theme_dark">On</string>
    <string name="pref_theme_light">Light theme</string>
    <string name="theme_light_default">Default</string>
    <string name="theme_light_blue">Light blue</string>
    <string name="pref_theme_dark">Dark theme</string>
    <string name="theme_dark_default">Default</string>
    <string name="theme_dark_blue">Dark blue</string>
    <string name="theme_dark_amoled">AMOLED black</string>
    <string name="pref_start_screen">Start screen</string>
    <string name="pref_language">Language</string>
    <string name="system_default">Default</string>
    <string name="pref_date_format">Date format</string>
    <string name="pref_confirm_exit">Confirm exit</string>
    <string name="pref_manage_notifications">Manage notifications</string>
    <string name="pref_category_security">Security</string>
    <string name="lock_with_biometrics">Lock with biometrics</string>
    <string name="lock_when_idle">Lock when idle</string>
    <string name="lock_always">Always</string>
    <string name="lock_never">Never</string>
    <plurals name="lock_after_mins">
        <item quantity="one">After 1 minute</item>
        <item quantity="other">After %1$s minutes</item>
    </plurals>
    <string name="secure_screen">Secure screen</string>
    <string name="secure_screen_summary">Hide app contents when switching apps and block screenshots</string>
    <string name="hide_notification_content">Hide notification content</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_library_columns">Items per row</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="default_columns">Default</string>
    <string name="pref_jump_to_chapters">Jump to chapters on open</string>
    <string name="pref_category_library_update">Updates</string>
    <string name="pref_library_update_interval">Library update frequency</string>
    <string name="update_never">Manual</string>
    <string name="update_1hour">Hourly</string>
    <string name="update_2hour">Every 2 hours</string>
    <string name="update_3hour">Every 3 hours</string>
    <string name="update_6hour">Every 6 hours</string>
    <string name="update_12hour">Every 12 hours</string>
    <string name="update_24hour">Daily</string>
    <string name="update_48hour">Every 2 days</string>
    <string name="update_weekly">Weekly</string>
    <string name="update_monthly">Monthly</string>
    <string name="pref_library_update_prioritization">Library update order</string>
    <string name="pref_library_update_restriction">Library update restrictions</string>
    <string name="pref_library_update_restriction_summary">Update only when the conditions are met</string>
    <string name="wifi">Wi-Fi</string>
    <string name="charging">Charging</string>
    <string name="pref_update_only_non_completed">Only update ongoing manga</string>
    <string name="pref_library_update_refresh_metadata">Automatically refresh metadata</string>
    <string name="pref_library_update_refresh_metadata_summary">Check for new cover and details when updating library</string>
    <string name="pref_library_update_error_notification">Show update errors notifications</string>
    <string name="pref_category_library_categories">Categories</string>
    <string name="default_category">Default category</string>
    <string name="default_category_summary">Always ask</string>
    <plurals name="num_categories">
        <item quantity="one">%d category</item>
        <item quantity="other">%d categories</item>
    </plurals>
    <string name="pref_library_update_categories">Categories to include in global update</string>
    <string name="all">All</string>
    <string name="all_lang">All</string>
    <string name="ext_updates_pending">Updates pending</string>
    <string name="ext_update">Update</string>
    <string name="ext_obsolete">Obsolete</string>
    <string name="ext_install">Install</string>
    <string name="ext_pending">Pending</string>
    <string name="ext_downloading">Downloading</string>
    <string name="ext_installing">Installing</string>
    <string name="ext_installed">Installed</string>
    <string name="ext_trust">Trust</string>
    <string name="ext_unofficial">Unofficial</string>
    <string name="ext_untrusted">Untrusted</string>
    <string name="ext_uninstall">Uninstall</string>
    <string name="ext_available">Available</string>
    <string name="untrusted_extension">Untrusted extension</string>
    <string name="unknown">Unknown</string>
    <string name="status">Status</string>
    <string name="source">source</string>
    <string name="studios">Studios :</string>
    <string name="end_date">End Date :</string>
    <string name="start_date">Start Date :</string>
    <string name="native1">Native :</string>
    <string name="new_version">New Version</string>
    <string name="update">Update</string>
    <string name="checking_update">Checking Update</string>
</resources>