<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroud_dark"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:maxHeight="400dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_a"
        android:backgroundTint="@color/colorAccent"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tintMode="src_in" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checking_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/card_update"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="#43FF0000"
        app:cardCornerRadius="11dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:elevation="7dp"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="40dp"
                android:fontFamily="@font/ptsans_narrow_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_version"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.loopeer.shadow.ShadowView
                android:id="@+id/genre_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/browse"
                android:layout_toStartOf="@+id/browse"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="onShadowClickTest"
                app:backgroundColor="@color/transparent"
                app:cornerRadius="4dp"
                app:foregroundColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/update"
                    android:textColor="@color/colorAccent"
                    app:layout_gravity="center" />
            </com.loopeer.shadow.ShadowView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:elevation="5dp"
        android:visibility="gone"
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>