<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroud_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:alpha="0.2"
                android:id="@+id/backgroundimg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="@dimen/poster_w"
                    android:layout_height="@dimen/posterh"
                    android:layout_marginStart="@dimen/poster_margin_left"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/poster_margin_right"
                    android:layout_marginBottom="10dp"
                    android:maxWidth="@dimen/poster_w"
                    android:maxHeight="@dimen/posterh" >
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:background="@color/red"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="4dp" />
                    <ProgressBar
                        android:elevation="5dp"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/poster"
                        android:elevation="10dp"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:riv_corner_radius="4dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/ptsans_narrow_bold"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/title_size" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nativ"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/native1"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/nativtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/unknown"
                            android:textColor="@color/secondary_text_white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/statustext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/unknown"
                            android:textColor="@color/secondary_text_white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/starttext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/unknown"
                            android:textColor="@color/secondary_text_white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_date"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/endtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/unknown"
                            android:textColor="@color/secondary_text_white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:textColor="@color/colorAccent">
                        <TextView
                            android:id="@+id/studios"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/studios"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studiotext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/unknown"
                            android:textColor="@color/secondary_text_white" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:textColor="@color/colorAccent">
                        <TextView
                            android:id="@+id/source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/source"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/sourcetext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/unknown"
                            android:textColor="@color/secondary_text_white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.sackcentury.shinebuttonlib.ShineButton
                android:visibility="gone"
                android:id="@+id/btn"
                android:layout_width="@dimen/watchlistsize"
                android:layout_height="@dimen/watchlistsize"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:src="@color/white"
                app:allow_random_color="false"
                app:big_shine_color="#FF6666"
                app:btn_color="@color/white"
                app:btn_fill_color="#FF6666"
                app:click_animation_duration="200"
                app:enable_flashing="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shine_animation_duration="1500"
                app:shine_count="8"
                app:shine_turn_angle="10"
                app:siShape="@drawable/towatchlist"
                app:small_shine_color="#CC9999"
                app:small_shine_offset_angle="20" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="4dp"
            android:id="@+id/recyclercategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="4dp"
            android:fontFamily="@font/ptsans_narrow_bold"
            android:textColor="@color/white"
            android:id="@+id/synopsis"
            android:text="Synopsis"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:ellipsize="end"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:visibility="gone"
            android:padding="4dp"
            android:textColor="@color/white"
            android:id="@+id/show_more"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="Show More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="4dp"
            android:id="@+id/recycler_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
     </LinearLayout>
</ScrollView>